# MLOPS

./: .dockerignore  .env.example  .gcloudignore  DASHBOARD_GUIDE.md  DEMO_LIVE_PROOF.md  DEMO_READY.md  DEMO_RUNNING.md  DEPLOYMENT_GUIDE.md  DEPLOY_NEW_MODEL.md  DEPLOY_NOW.md  DOWNLOAD_DATASET.md  Dockerfile.cloudrun  Dockerfile.minimal  Dockerfile.production  FIXES_APPLIED.md  GCP_DEPLOY.md  GITHUB_SECRETS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_ALL.md  MISSION_ACCOMPLISHED.md  MLFLOW_UI_DEMO.md  MLOps Tutorial report.txt  MONITORING_SETUP_COMPLETE.md  NEXT_STEPS.md  ONE_CLICK_DEPLOY.md  PRODUCTION_README.md  QUICK_DEMO_GUIDE.md  README.md  REMAINING_WORK.md  RUN_DEMO.md  SYSTEM_VALIDATION_REPORT.md  VERIFICATION_RESULTS.md  VERIFY_DEPLOYMENT.md  cloudbuild.yaml  dashboard.py  deploy.ps1  deploy.sh  download_dataset.bat  drizzle.config.ts  dvc.yaml  (+7 more)
client/: requirements.md
docker/: Dockerfile
docs/: ACADEMIC_GUIDE.md  DATASET_SETUP.md  MLOPS_COMPONENTS_GUIDE.md
models/: best_model_info.json  gradient_boosting.pkl  gradient_boosting_metadata.json  label_encoders.pkl  logistic_regression.pkl  logistic_regression_metadata.json  random_forest_metadata.json  scaler.pkl  xgboost.pkl  xgboost_metadata.json
monitoring/: alert_rules.yml  grafana_dashboard.json  prometheus.yml
reports/: drift_report.html  evaluation_report.md
scripts/: check_data.py  check_deployment.py  check_registry.py  download_dataset.py  reset_to_baseline.py  run_demo.py  run_workflow.py  setup_check.py
server/: db.ts  routes.ts  storage.ts
shared/: routes.ts  schema.ts
(+37 files in other folders)
